ops/k8s/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/erdemirbass/microservices-cicd-pipeline-worker:latest
